single-control-plane-multitenancy/blue-zone/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: default
spec:
  egress:
    - hosts:
      - "blue-a/*"
      - "blue-b/*"
      - "istio-system/*"
