single-control-plane-multitenancy/blue-zone/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-zone
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["blue-a", "blue-b"]
